Adicionei arvore basica e um sitema de arquivo

--- a/ZylixTest/MainWindow.xaml
+++ b/ZylixTest/MainWindow.xaml
@@ -9,6 +9,7 @@
     <Grid Background="LightGray">
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="5"/>
         </Grid.RowDefinitions>
@@ -24,15 +25,28 @@
         <Border Grid.Row="0" Grid.Column="0" Grid.RowSpan="4" Background="LightGray"/>
         <Border Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="4" Background="LightGray"/>
         <Border Grid.Column="3" Grid.Row="0" Grid.RowSpan="4" Background="LightGray"/>
-        
+        <!-- Implementaçao do menu iniciar-->
+        <Menu Grid.Column="1" Grid.Row="1" Background="LightGray" Margin="3">
+            <MenuItem Header="Arquivo" Background="LightGray">
+                <MenuItem x:Name="menuLoad" Header="Carregar  arquivo" Click="menuLoad_Click"/>
+                <MenuItem x:Name="menuSave" Header="Salvar  arquivo" Click="menuSave_Click"/>
+            </MenuItem>
+        </Menu>
         <!-- Implementaçao da tree-->
-        <ScrollViewer Margin="3" Grid.Column="1" Grid.Row="1" Background="White" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+        <ScrollViewer Margin="3" Grid.Column="1" Grid.Row="2" Background="White" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <TreeView>
-                
+                <TreeViewItem Header="Config Directory">
+                    <TreeViewItem Header="000 System Layout"/>
+                    <TreeViewItem Header="100 Pulse Inputs"/>
+                </TreeViewItem>
+                <TreeViewItem Header="System Directory">
+                    <TreeViewItem Header="Security Directotry"/>
+                    <TreeViewItem Header="001 - General Purpose"/>
+                </TreeViewItem>
             </TreeView>
         </ScrollViewer>
        <!-- Implementraçao dos elementos-->
-        <ScrollViewer Margin="5" Grid.Column="2" Grid.Row="1" x:Name="ctntScroll" Visibility="Visible" Background="White"  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+        <ScrollViewer Margin="5" Grid.Column="2" Grid.Row="2" x:Name="ctntScroll" Visibility="Visible" Background="White"  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
@@ -51,15 +65,15 @@
                 <Label Grid.Column="2" Content="Value" Background="LightGray" BorderBrush="DarkGray" BorderThickness="1"/>
                 <Label Grid.Column="3" Content="Comment" Background="LightGray" BorderBrush="DarkGray" BorderThickness="1"/>
                 <!-- Teste-->
-                <Label Grid.Column="0" Grid.Row="1" Content="105"/>
-                <Label Grid.Column="1" Grid.Row="1" Content="Maximum Available arms"/>
-                <Label Grid.Column="2" Grid.Row="1" Content="0"/>
-                <Label Grid.Column="3" Grid.Row="1" Content=""/>
+                <TextBox x:Name="ID_1" Grid.Column="0" Grid.Row="1" Text="105"/>
+                <TextBox x:Name="DESC_1" Grid.Column="1" Grid.Row="1" Text="Maximum Available arms"/>
+                <TextBox x:Name="VAL_1" Grid.Column="2" Grid.Row="1" Text="0"/>
+                <TextBox x:Name="COM_1" Grid.Column="3" Grid.Row="1" Text=""/>
 
             </Grid>
         </ScrollViewer>
         <!-- Controla o grid spliter que controla o tamanho das partes da janela-->
-        <GridSplitter Grid.Column="2" Grid.Row="1" Background="LightGray" HorizontalAlignment="Left" Width="6" BorderThickness="1" BorderBrush="Black" Margin="0"/>
+        <GridSplitter Grid.Column="2" Grid.Row="2" Background="LightGray" HorizontalAlignment="Left" Width="6" BorderThickness="1" BorderBrush="Black" Margin="0"/>
 
     </Grid>
 </Window>
