--- a/ZylixTest/MainWindow.xaml
+++ b/ZylixTest/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ZylixTest"
         mc:Ignorable="d"
-        Title="Zylix Test" MinWidth="100" Height="450" Width="800" ResizeMode="CanResize" SizeChanged="Window_SizeChanged">
+        Title="Zylix Test" MinWidth="100" Height="450" Width="904" ResizeMode="CanResize" SizeChanged="Window_SizeChanged">
     <Grid Background="LightGray">
         <Grid.RowDefinitions>
             <RowDefinition Height="5"/>
@@ -37,32 +37,23 @@
             <TreeView x:Name="filetree_main"/>
 
         </ScrollViewer>
-       <!-- Implementraçao dos elementos-->
-        <ScrollViewer Margin="5" Grid.Column="2" Grid.Row="2" x:Name="ctntScroll" Visibility="Visible" Background="White"  VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="3*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition x:Name="last" Height="*"/>
-                </Grid.RowDefinitions>
-                <Label Content="ID" Background="LightGray" BorderBrush="DarkGray" BorderThickness="1"/>
-                <!-- Define o nome dos parametros-->
-                <Label Grid.Column="1" Content="Description" Background="LightGray" BorderBrush="DarkGray" BorderThickness="1"/>
-                <Label Grid.Column="2" Content="Value" Background="LightGray" BorderBrush="DarkGray" BorderThickness="1"/>
-                <Label Grid.Column="3" Content="Comment" Background="LightGray" BorderBrush="DarkGray" BorderThickness="1"/>
-                <!-- Teste-->
-                <TextBox x:Name="ID_1" Grid.Column="0" Grid.Row="1" Text="105" BorderThickness="0"/>
-                <TextBox x:Name="DESC_1" Grid.Column="1" Grid.Row="1" Text="Maximum Available arms" BorderThickness="0"/>
-                <TextBox x:Name="VAL_1" Grid.Column="2" Grid.Row="1" Text="0" BorderThickness="0"/>
-                <TextBox x:Name="COM_1" Grid.Column="3" Grid.Row="1" Text="" BorderThickness="0"/>
-
-            </Grid>
+        <!-- Implementraçao dos elementos-->
+        <ScrollViewer x:Name="ctntScroll" Margin="5" Grid.Column="2" Grid.Row="2" Visibility="Visible" Background="White" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+            <DataGrid x:Name="ctntGrid" VerticalAlignment="Top" HorizontalAlignment="Left" Height="auto" Width="700" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Disabled" >
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridColumnHeader}">
+                        <Setter Property="FontFamily" Value="Times New Roman"/>
+                    </Style>
+                </DataGrid.Resources>
+                <!-- Data Grid Header-->
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ID" Width="*" Binding="{Binding ID, Mode=OneWay}"/>
+                    <DataGridTextColumn Header="Description" Width="2*" Binding="{Binding Description, Mode=OneWay }"/>
+                    <DataGridTextColumn Header="Value" Width="2*" Binding="{Binding Value, Mode=OneWay}"/>
+                    <DataGridTextColumn Header="Comments" Width="3*" Binding="{Binding Comments, Mode=OneWay}"/>
+                </DataGrid.Columns>   
+ 
+            </DataGrid>
         </ScrollViewer>
         <!-- Controla o grid spliter que controla o tamanho das partes da janela-->
         <GridSplitter Grid.Column="2" Grid.Row="2" Background="LightGray" HorizontalAlignment="Left" Width="6" BorderThickness="1" BorderBrush="Black" Margin="0"/>
